# Sacred-Randomizer

./: .gitignore  AGENTS.md  LICENSE  README.md  config.yaml  fe8_randomizer.py  fe8rom.py  gui.py  incremental_test.yaml  pyproject.toml  randomizer.py  test_config.yaml  test_output.txt
dev/: incremental_test.yaml  might_vs_magic.yaml  release_test.yaml  requirements.txt  sword_locked.yaml
fe8/: cli.py  fe8rom.py  gui.py  randomizer.py
scripts/: _analyze_promo_function.py  _check_final.py  _check_item_ptrs.py  _check_items.py  _check_palette.py  _check_pointers.py  _check_weapon_types.py  _dump_unit.py  _explore_rom.py  _find_chest_items.py  _find_items.py  _find_items3.py  _find_itemtable2.py  _find_promo2.py  _find_promo3.py  _find_promo4.py  _find_promo5.py  _find_promo_table.py  _map_chapter_ud.py  _promo_analysis2.py  _promo_analysis3.py  _promo_analysis4.py
tests/: test_randomizer.py
