[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fe8-randomizer"
version = "1.0.0"
description = "Fire Emblem: The Sacred Stones (FE8U) ROM Randomizer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Kody Degolier" },
]
dependencies = [
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
fe8-randomizer = "fe8_randomizer:main"

[tool.pytest.ini_options]
testpaths = ["tests"]


